--- a/style/style.css
+++ b/style/style.css
@@ -5,8 +5,40 @@ body{
 }
 /* content head */
 h1{
-    font-size: 55px;
+    font-size: 50px;
 }
 .name-color{
-    color:darkcyan;
+    color:#28BAE5;
+}
+/* top banner */
+/* content sub-head */
+h3{
+    font-size: 30px;
+}
+.top-banner{
+    display: flex;
+    margin-bottom: 150px;
+    background-image: url(../images/top-banner.png);
+    background-repeat: no-repeat;
+}
+p{
+    font-weight: 600;
+    color: dimgray;
+    margin-bottom: 50px;
+}
+.link-button{
+    text-decoration: none;
+    color: rgb(10, 255, 255);
+    font-weight: 700;
+    background-image: linear-gradient(#f88466,#fb6856);
+    padding: 10px 40px;
+    text-transform: uppercase;
+    border-radius: 5px;
+}
+.half-width{
+    width: 50%;
+    padding-left:2%;
+}
+.half-width img{
+    width: 100%;
 }
