--- a/style/style.css
+++ b/style/style.css
@@ -15,9 +15,11 @@ h1{
 h3{
     font-size: 30px;
 }
-.top-banner{
-    display: flex;
+section{
+    display: flex;    
     margin-bottom: 150px;
+}
+.top-banner{
     background-image: url(../images/top-banner.png);
     background-repeat: no-repeat;
 }
@@ -37,8 +39,39 @@ p{
 }
 .half-width{
     width: 50%;
-    padding-left:2%;
+    padding:2%;
 }
 .half-width img{
     width: 100%;
+}
+/* dream big */
+.centering-dream-info{
+    padding-top: 150px;
+}
+h2{
+    font-size: 40px;
+}
+#full-stack-dev{
+    box-shadow: 10px 10px gray;
+    width: 40%;
+    margin-right: 5%;
+    margin-left: 5%;
+    border-left: 15px solid;
+    border-image: linear-gradient(orange,tomato);
+    border-image-slice: 1;
+    border-radius: 15px;
+}
+#baby-web-dev{
+    box-shadow: 10px 10px gray;
+    
+    width: 40%;
+    margin-right: 5%;
+    margin-left: 5%;
+    border-left: 15px solid;    
+    border-image: linear-gradient(cyan,blue);
+    border-image-slice: 1;
+    border-radius: 15px;
+}
+footer{
+    text-align: center;
 }
